Use dash-auth 2.3.0
Signed-off-by: Guillaume Tauzin <4648633+gtauzin@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ dependencies = [
 [project.optional-dependencies]
 dashboards = [
     "plotly>=6.0",
-    "vizro",
-    "dash-auth@git+https://github.com/plotly/dash-auth@main",
+    "vizro>=0.1.38",
+    "dash-auth>=2.3",
 ]
 pipelines = [
     "kedro-dagster",
