Enable OIDC and implement @antonymilne's suggestions
Signed-off-by: Guillaume Tauzin <4648633+gtauzin@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
 dashboards = [
     "plotly>=6.0",
     "vizro>=0.1.38",
-    "dash-auth>=2.3",
+    "dash-auth[oidc]>=2.3",
 ]
 pipelines = [
     "kedro-dagster",
